<resources>
    <string name="app_name">Accounting 4 Cars</string>
    
    <string name="action_settings">Settings</string>
    <string name="search_hint">Search</string>
    <string name="voicePromtText">Say searching phrase</string>
    <string name="action_bar_search"></string>
    <string name="addFuel">Add fueling</string>
    <string name="updateFuel">Edit fueling</string>
    <string name="spinner_auto_prompt">Select auto</string>
    <string name="select_auto_title">Select auto</string>
    <string name="statistic_label">Statistics</string>
    <string name="title_activity_fuel_editor">FuelEditorActivity</string>
    <string name="feDateLabel">Date</string>
    <string name="feLabelOdo">Odo</string>
    <string name="feLabelTrip">Trip</string>
    <string name="feLabelSumma">Summa</string>
    <string name="feLabelPrice">Price</string>
    <string name="feLabelLitres">Litres</string>
    <string name="feBtnSave">Save</string>
    <string name="feBtnAdd">Add</string>
    <string name="feBtnUpdate">Update</string>
    <string name="makePhoto">Make photo</string>
    <string name="clearPhoto">Clear all photos</string>
    <string name="feLabelQty">Qty</string>

    <string name="title_section1">Stat</string>
    <string name="title_section2">Fuel</string>
    <string name="title_section3">Repair</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_work">WorkActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_example">Example</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cmAddFueling">Add fueling</string>
    <string name="cmEditFueling">Edit fueling</string>
    <string name="cmDeleteFueling">Delete</string>
    <string name="statLastFill">Last fill</string>


</resources>
